[gd_scene load_steps=6 format=3 uid="uid://dnoncq1p8lcfc"]

[ext_resource type="Script" path="res://Scripts/Shop.gd" id="1_6lawt"]
[ext_resource type="Texture2D" uid="uid://clpj6o8snf8l2" path="res://Images/computer.png" id="2_upbky"]
[ext_resource type="Texture2D" uid="uid://dalayjqdbp3pc" path="res://Images/pot.png" id="3_kq2kd"]
[ext_resource type="Texture2D" uid="uid://bkr7j74y83o3b" path="res://Images/seeds.png" id="4_3frhj"]
[ext_resource type="Texture2D" uid="uid://co2kk5wqe2l6m" path="res://Images/soil.png" id="5_uggyv"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6lawt")

[node name="Buy Seeds" type="Button" parent="."]
layout_mode = 2
offset_left = 461.0
offset_top = 290.0
offset_right = 633.0
offset_bottom = 373.0
text = "Buy Seeds"

[node name="Buy Pots" type="Button" parent="."]
layout_mode = 2
offset_left = 90.0
offset_top = 290.0
offset_right = 262.0
offset_bottom = 373.0
text = "Buy Pots"

[node name="Buy Soil" type="Button" parent="."]
layout_mode = 2
offset_left = 279.0
offset_top = 290.0
offset_right = 451.0
offset_bottom = 373.0
text = "Buy Soil"

[node name="Back" type="Button" parent="."]
layout_mode = 2
offset_left = 1005.0
offset_top = 314.0
offset_right = 1090.0
offset_bottom = 374.0
text = "Back"

[node name="Computer" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(829, 336)
scale = Vector2(1.70833, 1.15679)
texture = ExtResource("2_upbky")

[node name="Coin Counter" type="Label" parent="."]
layout_mode = 0
offset_left = 971.0
offset_top = 58.0
offset_right = 1133.0
offset_bottom = 116.0
size_flags_horizontal = 10
size_flags_vertical = 8
text = "Coins: "

[node name="Pot" type="Sprite2D" parent="."]
position = Vector2(167, 199)
scale = Vector2(0.09, 0.111717)
texture = ExtResource("3_kq2kd")

[node name="Seeds" type="Sprite2D" parent="."]
position = Vector2(548, 171)
scale = Vector2(0.65, 0.636111)
texture = ExtResource("4_3frhj")

[node name="Soil" type="Sprite2D" parent="."]
position = Vector2(355, 182)
scale = Vector2(0.522222, 0.533333)
texture = ExtResource("5_uggyv")

[connection signal="pressed" from="Buy Seeds" to="." method="_on_buy_beans_pressed"]
[connection signal="pressed" from="Buy Seeds" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buy Seeds" to="." method="_on_buy_seeds_pressed"]
[connection signal="pressed" from="Buy Pots" to="." method="_on_buy_beans_pressed"]
[connection signal="pressed" from="Buy Pots" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buy Pots" to="." method="_on_buy_pots_pressed"]
[connection signal="pressed" from="Buy Soil" to="." method="_on_buy_beans_pressed"]
[connection signal="pressed" from="Buy Soil" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buy Soil" to="." method="_on_buy_soil_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_buy_beans_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
